compiler/test/conformance/testdata/errors/08_body_only_name_mismatch.yz
greet #(name String) = {
    last String
    print(last)
}

main: {
    greet("Alice")
}
